  * pg_lsclusters: Fix undefined value if owneruid cannot be determined (which
    can happen in special setups). Thanks to Daniel Pittman! (Closes: #541434)
  * t/020_create_sql_remove.t: Verify permissions of the data and
    configuration directories.
  * pg_createcluster: Make /etc/postgresql/<version> and
    /var/lib/postgresql/<version> owned by 'postgres', so that they can be
    administrated with 'postgres' privileges. (LP: #236704)
  * t/020_create_sql_remove.t: Check that a missing log file is recreated by
    pg_ctlcluster (if it has enough permissions).
  * pg_ctlcluster: Make re-creation of log file actually work. (LP: #391119,
    #372476)

 -- Martin Pitt <mpitt@debian.org>  Wed, 30 Dec 2009 10:20:41 +0100

postgresql-common (102) unstable; urgency=low

  * debian/postgresql-common.postinst: Create /var/log/postgresql/ if it does
    not exist, before trying to chown/chmod it.
  * t/001_packages.t: Check that -server-dev-* is installed (for
    t/140_pg_config.t)
  * t/001_packages.t: Check that the system default locale is an UTF-8 one.
  * debian/supported-versions: Add Ubuntu 10.04.
  * t/050_encodings.t: Disable Russian error message encoding test for now,
    since Russian translations were dropped upstream (too incomplete).

 -- Martin Pitt <mpitt@debian.org>  Mon, 14 Dec 2009 19:05:19 +0100

postgresql-common (101) unstable; urgency=low

  * debian/supported-versions: Only support 8.4 in Ubuntu 9.10. (LP: #403381)
  * PgCommon.pm, change_ugid(): Fix taint error. (LP: #403693)
  * Update Swedish debconf translations, thanks Martin Bagge!
    (Closes: #539216)
  * t/090_multicluster.t: Run psql error tests under LC_MESSAGES=C to not fail
    under non-English locales.
  * pg_upgradecluster: Do not try to migrate "stats_*" settings to
    "track_counts" again if track_counts is already set. This led to disabling
    autovacuum on a 8.3 → 8.4 migration. (Closes: #540351)